FIX: image extra space

--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -56,6 +56,11 @@
             width: 50px;
             margin-right: 1em;
 
+            > img {
+                vertical-align: middle;
+            }
+        }
+
         .nav-open &,
         .filter-active & {
             opacity: 0;
